- Sharing info visualized. - possibility to add person to a group from groups section

--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -18,6 +18,7 @@
 
     <!-- id's which will be in R.id and you'll use later -->
     <item name="mygroups_add" type="id"/>
+    <item name="mygroups_add_person" type="id"/>
     <item name="menu_item_myprofile_edit" type="id"/>
     <item name="mygroups_delete" type="id"/>
     <item name="mygroups_rename" type="id"/>
