--- a/res/layout/myprofile.xml
+++ b/res/layout/myprofile.xml
@@ -31,7 +31,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical" >
 
             <TextView
@@ -52,33 +52,35 @@
                 android:textColor="@color/sc_dark_gray"
                 android:textSize="30dp" />
 
-            <RelativeLayout
+            <!-- <RelativeLayout
                 android:id="@+id/myprofile_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="3dp"
                 android:background="@android:color/transparent"
                 android:divider="@android:color/transparent"
-                android:dividerHeight="20dp" >
+                android:dividerHeight="20dp" > -->
 
+                
                 <ImageView
                     android:id="@+id/myprofile_pic"
-                    android:contentDescription="@string/empty"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@string/empty"
+                    android:scaleType="centerInside"
                     android:src="@drawable/placeholder" />
 
-                <LinearLayout
+                <!-- <LinearLayout
                     android:id="@+id/myprofile_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@+id/myprofile_pic"
                     android:orientation="vertical"
                     android:padding="10dp" >
-                </LinearLayout>
-            </RelativeLayout>
+                </LinearLayout> -->
+          <!--  </RelativeLayout> -->
         </LinearLayout>
-
     </ScrollView>
 
 </LinearLayout>
