fix strings, add value-it, add tutorial voice in navigation drawer

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -53,3 +53,5 @@
         android:dividerHeight="0dp"
         android:background="#111"/>
 </android.support.v4.widget.DrawerLayout>
+       <!--  android:layout_marginTop="-38dp"
+        android:paddingTop="40dp" -->
