--- a/res/values/tutorial_strings.xml
+++ b/res/values/tutorial_strings.xml
@@ -18,21 +18,26 @@
 	
     <string name="tutorial_startup_msg">bla bla</string>
     <string name="tutorial_start_btn">Start</string>
-    
+     
+    <string name="t_title_profile">Profilo</string>
+    <string name="t_msg_profile">Modifica il tuo profilo</string>
+
+    <string name="t_title_sync">Sincronizza</string>
+    <string name="t_msg_sync">Se utilizzi più di un dispositivo, puoi sincronizzare le informazioni</string>
     
     <string name="t_title_shared">Shared</string>
-    <string name="t_msg_shared">Shared bla bla</string>
+    <string name="t_msg_shared">The documents shared by you or with you</string>
     
     <string name="t_title_campus">Campus</string>
-    <string name="t_msg_campus">Shared bla bla</string>
+    <string name="t_msg_campus">Find other people in the community</string>
     
     <string name="t_title_groups">Groups</string>
-    <string name="t_msg_groups">groups bla bla</string>
+    <string name="t_msg_groups">Manage your groups of people</string>
 
     <string name="t_title_profile">Profile</string>
-    <string name="t_msg_profile">profile bla bla</string>
+    <string name="t_msg_profile">Edit your profile</string>
 
-    <string name="t_title_sync">Syncronize</string>
-    <string name="t_msg_sync">sync bla bla</string>
+    <string name="t_title_sync">Synchronize</string>
+    <string name="t_msg_sync">If you use the app on several devices, sync the information among them</string>
     
 </resources>
