--- a/res/values/tutorial_strings.xml
+++ b/res/values/tutorial_strings.xml
@@ -18,13 +18,7 @@
 	
     <string name="tutorial_startup_msg">bla bla</string>
     <string name="tutorial_start_btn">Start</string>
-     
-    <string name="t_title_profile">Profilo</string>
-    <string name="t_msg_profile">Modifica il tuo profilo</string>
-
-    <string name="t_title_sync">Sincronizza</string>
-    <string name="t_msg_sync">Se utilizzi più di un dispositivo, puoi sincronizzare le informazioni</string>
-    
+         
     <string name="t_title_shared">Shared</string>
     <string name="t_msg_shared">The documents shared by you or with you</string>
     
@@ -38,6 +32,6 @@
     <string name="t_msg_profile">Edit your profile</string>
 
     <string name="t_title_sync">Synchronize</string>
-    <string name="t_msg_sync">If you use the app on several devices, sync the information among them</string>
+    <string name="t_msg_sync">If you use the app on several devices, sync the information between them</string>
     
 </resources>
